Mon Feb 23 09:30:30 CET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Added support for public key watching in server.  Affected
	  files are silcd/server.c, server_internal.h, command.c,
	  server_util.c.

Sun Feb 22 19:03:59 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Added public key to the SIlcClientEntry.  Affected files
	  are lib/silcclient/silcclient.h, command_reply.c, idlist.c

	* Fixed the get_clients_whois reply processing to return
	  exactly same entries server returned.  Makes it possible
	  to search using attributes.  Affected file is
	  lib/silcclient/idlist.c.

Sat Feb 21 19:21:57 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Save founder key to SilcChannelEntry.  Affected files are
	  lib/silcclient/silcclient.h, command_reply.c, idlist.c.

Fri Feb 20 20:37:38 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Call the monitor callback with _CLOSED status from the
	  silc_client_file_close.  Affected files are
	  lib/silcclient/client_fpt.c, silcclient.h

	* Added silc_client_get_clients_whois which resolves using
	  WHOIS, and supports requested attributes as well.
	  Affected files are lib/silcclient/silcclient.h, idlist.c.

Fri Feb 19 21:09:22 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Added support for asking the destination filename where
	  the downloaded file is saved in the file transfer.  Affected
	  files are lib/silccilent/silcclient.h, client_ftp.c.

Wed Feb 18 02:46:17 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Fixed error handling in resuming data processing.  Affected
	  files are lib/silcclient/client_resume.c and client.c.

Tue Feb 17 19:34:30 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Fixed silc_client_send_private_message to return TRUE correctly.
	  Affected file lib/silcclient/client_prvmsg.c.

	* Added topic to the SilcChannelEntry.  Affected files are
	  lib/silcclient/silcclient.h, command_reply.c, client_notify.c.
